# chief

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
src/chief/: __init__.py  brain.py  brain_select.py  cli.py  domain.py  engine.py  memory.py  paths.py  policy.py  setup_wizard.py  tools.py
src/chief/config/: __init__.py  config_check.py  defaults.models.json  defaults.providers.json  defaults.toml  loader.py  models_registry.py  providers_registry.py  runtime.py
src/chief/ipc/: __init__.py  client.py  protocol.py  server.py
src/chief/llm/: __init__.py  errors.py  intent_json.py  planner_context.py  probe.py  readiness.py  types.py
src/chief/llm/formats/: __init__.py  openai_chat_completions.py
src/chief/llm/providers/: __init__.py  anthropic_messages.py  custom_chat_completions.py  google_generative.py  http_chat_completions.py  openai.py
src/chief/llm/schema/: __init__.py  anthropic_messages.py  google_generative.py  openai_chat_completions.py
tests/: conftest.py  test_chat_parse.py  test_code_quality.py  test_config_check.py  test_engine.py  test_ipc.py  test_llm_integration.py  test_llm_wire_schema.py  test_models_registry.py  test_providers_registry.py  test_readiness.py  test_setup_wizard.py
