[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chief"
version = "0.3.2"
description = "chief project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "platformdirs>=4.2,<5",
]

[project.scripts]
chief = "chief.cli:main"

[project.optional-dependencies]
dev = ["pytest-asyncio>=0.24", "pytest>=8"]

[project.urls]
Homepage = "https://github.com/pamnard/chief"
Repository = "https://github.com/pamnard/chief"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
chief = ["config/defaults.toml"]

[tool.setuptools.packages.find]
where = ["src"]
