[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chief"
version = "0.4.0"
description = "chief project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "platformdirs>=4.2,<5",
    "tomli-w>=1.0,<2",
]

[project.scripts]
chief = "chief.cli:main"

[project.optional-dependencies]
dev = [
    "interrogate>=1.5",
    "pydocstyle>=6.3",
    "pytest-asyncio>=0.24",
    "pytest>=8",
]

[tool.pydocstyle]
convention = "google"

[project.urls]
Homepage = "https://github.com/pamnard/chief"
Repository = "https://github.com/pamnard/chief"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
chief = ["config/defaults.toml", "config/defaults.providers.json", "config/defaults.models.json"]

[tool.setuptools.packages.find]
where = ["src"]
